DATAPUMP_ROLE updated to DATAPATCH_ROLE.

--- a/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
+++ b/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
@@ -14,7 +14,7 @@ granted_roles:
   - CDB_DBA
   - CONNECT
   - CTXAPP
-  - DATAPUMP_ROLE
+  - DATAPATCH_ROLE
   - DATAPUMP_EXP_FULL_DATABASE
   - DATAPUMP_IMP_FULL_DATABASE
   - DBA
