ORADMIN updated to ORDADMIN.

--- a/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
+++ b/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
@@ -65,7 +65,7 @@ granted_roles:
   - OLAP_USER
   - OLAP_XS_ADMIN
   - OPTIMIZER_PROCESSING_RATE
-  - ORADMIN
+  - ORDADMIN
   - PDB_DBA
   - PPLB_ROLE
   - PROVISIONER
