SYSUMP_ROLE updated to SYSUMF_ROLE.

--- a/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
+++ b/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
@@ -77,7 +77,7 @@ granted_roles:
   - SCHEDULER_ADMIN
   - SELECT_CATALOG_ROLE
   - SODA_APP
-  - SYSUMP_ROLE
+  - SYSUMF_ROLE
   - WM_ADMIN_ROLE
   - XDBADMIN
   - XDB_SET_INVOKER
