GSMROOT_USER_ROLE updated to GSMROOTUSER_ROLE.

--- a/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
+++ b/go-oracle/descend-into-folder/go_oracle_007/granted-roles.yaml
@@ -43,7 +43,7 @@ granted_roles:
   - GDS_CATALOG_SELECT
   - GGSYS_ROLE
   - GSMADMIN_ROLE
-  - GSMROOT_USER_ROLE
+  - GSMROOTUSER_ROLE
   - GSMUSER_ROLE
   - GSM_POOLADMIN_ROLE
   - HS_ADMIN_EXECUTE_ROLE
